--- a/examples/example_wago.conf
+++ b/examples/example_wago.conf
@@ -14,21 +14,22 @@
 ; 0 -> no debugging.
 ; 1 -> DP debugging.
 ; 2 -> DP and PHY debugging.
-debug=1
+debug=2
 
 
 ; PHY protocol layer configuration
 [PHY]
 
 ; The PHY layer driver type.
-;type=serial
+type=serial
 ;type=fpga
-type=dummy_slave
+;type=dummy_slave
 
 ; Only for type=serial:
 ; The PHY device name/path.
 ; Can be a device like /dev/ttyS0 or /dev/ttyAMA0
-dev=/dev/ttyS0
+# dev=/dev/ttyAMA0
+dev=UART2
 
 ; Only for type=serial:
 ; Serial line flow control and handshaking
@@ -43,12 +44,12 @@ spiSpeedHz=2500000
 
 ; The Profibus on-wire baud rate.
 ;baud=9600
-baud=19200
-;baud=45450
+;baud=19200 
+;baud=45450 
 ;baud=93750
 ;baud=187500
 ;baud=500000
-;baud=1500000
+baud=1500000
 ;baud=3000000
 ;baud=6000000
 ;baud=12000000
@@ -78,13 +79,13 @@ master_addr=2
 
 ; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
 ; pyprofibus does not use the name internally.
-name=first
+name=750-343
 
 ; This slave's Profibus address
 addr=8
 
 ; The path to the GSD file.
-gsd=../misc/dummy_modular.gsd
+gsd=wagob757.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
@@ -103,60 +104,12 @@ watchdog_ms=300
 ; entry with the name of the module.
 ; The module name must match the name from the GSD file (approximately).
 ; The modules are used in the order of the index number.
-module_0=dummy output module
-module_1=dummy output module
-module_2=dummy input module
-
-; The number of output bytes this slave transmits to the
-; master in Data_Exchange.
-; This usually depends on the modules plugged into the slave.
-output_size=2
-
-; The number of input bytes this slave expects to receive
-; in Data_Exchange.
-; This usually depends on the modules plugged into the slave.
-input_size=2
-
-; Request and interpret a slave diagnosis every n Data_Exchange telegrams.
-; n defaults to 0, which means: Never periodically request diagnosis.
-; If periodic diagnosis is switched off, then diagnostic information will only be requested on faults.
-; Note that input-only slaves (output_size=0) probably need a non-zero diag_period.
-diag_period=0
-
-
-; Second slave configuration
-[SLAVE_1]
-
-; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
-; pyprofibus does not use the name internally.
-name=second
-
-; This slave's Profibus address
-addr=42
-
-; The path to the GSD file.
-gsd=../misc/dummy_modular.gsd
-
-; Boolean: Sync mode enabled/available?
-sync_mode=1
-
-; Boolean: Freeze mode enabled/available?
-freeze_mode=1
-
-; 8 bit integer specifying the Profibus group ident mask.
-group_mask=1
-
-; This slave's watchdog timeout, in milliseconds.
-watchdog_ms=300
-
-; Module configuration.
-; For each module plugged into the slave, add a module_xxx
-; entry with the name of the module.
-; The module name must match the name from the GSD file (approximately).
-; The modules are used in the order of the index number.
-module_0=dummy output module
-module_1=dummy output module
-module_2=dummy input module
+module_0=750-343 No PI Channel
+module_1=750-610  Supply 24 V DC/DIA
+module_2=750-430  8 DI/24 V DC/3.0 ms
+module_3=750-430  8 DI/24 V DC/3.0 ms
+module_4=75x-530 8DO/24V DC/0.5A
+module_5=75x-530 8DO/24V DC/0.5A 
 
 ; The number of output bytes this slave transmits to the
 ; master in Data_Exchange.
